--- a/mouseStalker/main.html
+++ b/mouseStalker/main.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>MouseStalker</title>
+	<title>ニュートンがニュートンの法則にしたがっておちる</title>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js"></script>
 	<script type="text/javascript" src="main.js"></script>
 	<style type="text/css">
